[tool.poetry]
name = "230428-oop"
version = "0.1.0"
description = ""
authors = ["Churnobyl <tjdcjfals@gmail.com>"]
readme = "README.md"
packages = [{include = "230428_oop"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
